# PendragonCampaignManager

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy-action-gateway.yml  deploy-frontend.yml
action-gateway/: README.md  package-lock.json  package.json  wrangler.jsonc
action-gateway/tests/: gateway.test.mjs
app/: __init__.py  config.py  database.py  main.py  openapi.py  security.py
docs/: api.md  chatgpt-actions.md  cloud-run.md  custom-gpt-setup.md  development.md  er-diagram.md  frontend-deployment.md  openapi-gpt-dynasty.json  openapi-gpt-play.json  openapi-gpt-winter.json  openapi.json  player-guide.md  privacy-policy.md  schema.md  supabase.md
frontend/: README.md  package-lock.json  package.json  wrangler.jsonc  wrangler.production.jsonc
migrations/: 003_events.sql  004_dice_logs.sql  006_character_values.sql  007_glory.sql  008_locations_manors.sql  010_inheritance.sql  012_foundry_character_sync.sql  013_character_possessions.sql  014_foundry_family_sync.sql  015_winter_history.sql  018_annual_chronicles.sql  README.md  env.py
scripts/: apply_demo_seed.py  export_openapi.py  sync_supabase_migrations.py
seed/: 001_campaign.sql  002_characters_and_manor.sql  003_frontend_demo.sql  004_frontend_demo_expansion.sql  005_salisbury_campaign_slug.sql
supabase/: config.toml  seed.sql
tests/: test_cloud_run_config.py  test_error_cors.py  test_model_defaults.py  test_openapi.py  test_operations.py  test_schemas.py  test_supabase_layout.py
(+70 files in other folders)
