[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pendragon-db"
version = "0.1.0"
description = "Persistent campaign backend for Pendragon 6th Edition"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

